--- a/assets/scss/includes/base/_vars.scss
+++ b/assets/scss/includes/base/_vars.scss
@@ -1,2 +1,10 @@
 $color-1: #ffffff;
 $color-2: #000000;
+$color-3: #4D4D4F;
+$color-4: #7E7E7E;
+$color-5: #222222;
+$color-6: #ed1d25;
+$color-7: #F2F2F2;
+$color-8: #4B557D;
+$color-9: #F4F4F4;
+$color-10: #D2D2D2;
