--- a/assets/scss/includes/base/_default.scss
+++ b/assets/scss/includes/base/_default.scss
@@ -1,6 +1,71 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Open Sans', serif;
+    font-family: 'Inter', serif;
     font-size: 14px;
+}
+
+a {
+    color: $color-3;
+    text-decoration: none;
+}
+
+p {
+    margin: 0;
+    padding: 0;
+}
+
+ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.container {
+    max-width: 1320px;
+    margin: 0 auto;
+}
+
+.bg-grey {
+    background-color: $color-9;
+
+    .badge {
+        background-color: $color-1 !important;
+    }
+}
+
+.badge {
+    display: flex;
+    align-items: center;
+    width: max-content;
+    @include standart-font-style;
+    background-color: rgba($color: $color-9, $alpha: .3);
+    border-radius: 0;
+
+    .icon {
+        color: $color-6;
+    }
+
+    .text {
+        margin-left: 10px;
+        font-size: 17px;
+        font-weight: 400;
+        color: $color-3 !important;
+    }
+}
+
+.section-header {
+    text-align: center;
+    
+    .section-title {
+        @include section-title;
+    }
+
+    .section-description {
+        @include standart-font-style;
+    }
+}
+
+.obf-contain {
+    object-fit: contain !important;
 }
